# oculomatic

./: CMakeLists.txt  Makefile  README.md  conanfile.txt
doc/: installation.md
include/: gui.h  utils.h
include/capture/: capture.h  flycapture_capture.h  opencv_capture.h  pylon.h
include/comms/: comedi.h  tcp.h
include/daq/: comedi.h  tcp.h
src/: gui.cpp  oculomatic.cpp  utils.cpp
src/capture/: flycapture.cpp  opencv.cpp  pylon.cpp
src/comms/: comedi.cpp  tcp.cpp
src/daq/: daq.cpp
